Feature/manage non companies house organisation (#190)
* Feature/408632 update company address (#122)

* feature/408632-update-company-address

* feature/408632-update-company-address

* feature/408632 update company address

* feature/408632 update company address

* feature/408632 update company address

* feature/408632 update company address

* feature/408632 update company address

* Feature/userstory/408835 select new address (#123)

* Initial changes

* Fixing tests and back link pages

* Adding new session params

* Feature/408343 update company name (#125)

* feature/408343 update company name

* feature/408343 update company name

* Feature/409103 non companies house update business address (#126)

* #425612 (#119)

Description List (Summary list)
Fix  the semantic relationship between items

* Edit Business Address Implementation Including Ancillary Session Classes (#121)

* Edit Business Address Implementation Including Ancillary Session Classes

* Fixed Missing Mock Instantiation

* Fix Save Navigation Destination

* Fix Back Link and Correct UKNation ActionMethod Navigation

* Remove PostcodeLookupFailedKey

* Implemeneted Handling Back Link Where No Previous Page

* Fix Merge Issues

* feature/408749 business address postcode (#127)

* Feature/userstory/408835 select new address integration (#128)

* Adding more tests, and integrating with other pages

* Fixing build.

* feature/408343 update company name integration (#129)

* Feature/ad408613 add new org name (#131)

* add  new page for update organisation name

* Changed AccountController

* merge code

* Unit tests in progress

* add test method

* add user type check

* fix test issue

* tests fixed

* Fixed PR comments

* copied accountmanagementcontroller from feature branch

* AccountManagmentcontroller fixed

* reverted appsettings

* session added in post

* Added test for session update

* Adrians Implementation of non-companie

--- a/src/FrontendAccountManagement.Web/Resources/SharedResources.en.resx
+++ b/src/FrontendAccountManagement.Web/Resources/SharedResources.en.resx
@@ -189,4 +189,25 @@
   <data name="SaveAndContinue" xml:space="preserve">
     <value>Save and continue</value>
   </data>
+  <data name="UpdateOrgNameBackAriaLabel" xml:space="preserve">
+    <value>Click on this link if you wish to go back to the manage account page</value>
+  </data>
+  <data name="UpdateOrgAddressBackAriaLabel" xml:space="preserve">
+    <value>Click on this link if you wish to go back to the previous page</value>
+  </data>
+  <data name="BusinessPostcodeBackAriaLabel" xml:space="preserve">
+    <value>Click on this link if you wish to go back to the Do you want to update your business address page</value>
+  </data>
+  <data name="CompanyNameBackAriaLabel" xml:space="preserve">
+    <value>Click on this link if you wish to go back to the Do you want to update your organisation name page</value>
+  </data>
+  <data name="BusinessAddressBackAriaLabel" xml:space="preserve">
+    <value>Click here if you wish to go to the Do you want to update your organisation’s business address page</value>
+  </data>
+  <data name="UpdateBusinessAddressBackAriaLabel" xml:space="preserve">
+    <value>Click on this link if you wish to go back to the Do you want to update your business address page</value>
+  </data>
+  <data name="NonCompaniesHouseUkNationBackAriaLabel" xml:space="preserve">
+    <value>Click on this link if you wish to go back to the previous page</value>
+  </data>
 </root>
