--- a/src/FrontendAccountManagement.Web/ResourcesRegulator/Views/Shared/Partials/Govuk/_Footer.en.resx
+++ b/src/FrontendAccountManagement.Web/ResourcesRegulator/Views/Shared/Partials/Govuk/_Footer.en.resx
@@ -117,29 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Footer.Privacy" xml:space="preserve">
-    <value>Privacy</value>
-  </data>
-  <data name="Footer.Cookies" xml:space="preserve">
-    <value>Cookies</value>
+  <data name="Footer.Accessibility" xml:space="preserve">
+    <value>Accessibility statement</value>
   </data>
   <data name="Footer.AllContent" xml:space="preserve">
     <value>All content is available under the</value>
   </data>
+  <data name="Footer.Cookies" xml:space="preserve">
+    <value>Cookies</value>
+  </data>
   <data name="Footer.CrownCopyright" xml:space="preserve">
     <value>© Crown copyright</value>
-  </data>
-  <data name="Footer.ExceptWhere" xml:space="preserve">
-    <value>, except where otherwise stated</value>
-  </data>
-  <data name="Footer.OpenGovernment" xml:space="preserve">
-    <value>Open Government Licence v3.0</value>
-  </data>
-  <data name="Footer.Accessibility" xml:space="preserve">
-    <value>Accessibility statement</value>
-  </data>
-  <data name="Footer.SupportLinks" xml:space="preserve">
-    <value>Support links</value>
   </data>
   <data name="Footer.CustomerServiceTimes" xml:space="preserve">
     <value>Monday to Friday, 8:30am to 4:30pm</value>
@@ -147,11 +135,14 @@
   <data name="Footer.Email" xml:space="preserve">
     <value>Email</value>
   </data>
+  <data name="Footer.ExceptWhere" xml:space="preserve">
+    <value>, except where otherwise stated</value>
+  </data>
   <data name="Footer.GetHelp" xml:space="preserve">
     <value>Get help</value>
   </data>
-  <data name="Footer.Telephone" xml:space="preserve">
-    <value>Telephone</value>
+  <data name="Footer.GiveFeedback" xml:space="preserve">
+    <value />
   </data>
   <data name="Footer.LicenceDescription1" xml:space="preserve">
     <value>All content is available under the </value>
@@ -161,5 +152,20 @@
   </data>
   <data name="Footer.LicenceDescription3" xml:space="preserve">
     <value>, except where otherwise stated</value>
+  </data>
+  <data name="Footer.OpenGovernment" xml:space="preserve">
+    <value>Open Government Licence v3.0</value>
+  </data>
+  <data name="Footer.Privacy" xml:space="preserve">
+    <value>Privacy</value>
+  </data>
+  <data name="Footer.ReportAProblem" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Footer.SupportLinks" xml:space="preserve">
+    <value>Support links</value>
+  </data>
+  <data name="Footer.Telephone" xml:space="preserve">
+    <value>Telephone</value>
   </data>
 </root>
