--- a/src/FrontendAccountManagement.Web/Resources/Views/ReExAccountManagement/ViewDetails.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/ReExAccountManagement/ViewDetails.cy.resx
@@ -118,18 +118,33 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DetailsAndAccountPermissions" xml:space="preserve">
-    <value>Manylion a chaniatadau cyfrif</value>
+    <value>[Welsh] Details and account permissions</value>
   </data>
   <data name="Email" xml:space="preserve">
-    <value>E-bost</value>
+    <value>[Welsh] Email</value>
   </data>
   <data name="AccountPermissions" xml:space="preserve">
-    <value>Trwyddedau cyfrif</value>
+    <value>[Welsh] Account permissions</value>
   </data>
   <data name="AccountRole" xml:space="preserve">
-    <value>Rôl cyfrif</value>
+    <value>[Welsh] Account role</value>
   </data>
   <data name="AddedBy" xml:space="preserve">
-    <value>A ychwanegwyd gan</value>
+    <value>[Welsh] Added by</value>
+  </data>
+  <data name="ManageOrganisation.TabTeam.Permissions.ApprovedPerson" xml:space="preserve">
+    <value>[Welsh] Manage team, submit registration and accreditation (Approved Person)</value>
+  </data>
+  <data name="ManageOrganisation.TabTeam.Permissions.StandardUser" xml:space="preserve">
+    <value>[Welsh] Submit registration and accreditation (Standard User)</value>
+  </data>
+  <data name="ManageOrganisation.TabTeam.Permissions.BasicUser" xml:space="preserve">
+    <value>[Welsh] Read only access (Basic User)</value>
+  </data>
+  <data name="ManageOrganisation.TabTeam.Permissions.ReadOnly" xml:space="preserve">
+    <value>[Welsh] Read only access (ReadOnly User)</value>
+  </data>
+  <data name="Remove" xml:space="preserve">
+    <value>[Welsh] Remove</value>
   </data>
 </root>
