Fixed view details by mapping right properties

--- a/src/FrontendAccountManagement.Web/Resources/Views/ReExAccountManagement/ViewDetails.cy.resx
+++ b/src/FrontendAccountManagement.Web/Resources/Views/ReExAccountManagement/ViewDetails.cy.resx
@@ -132,17 +132,20 @@
   <data name="AddedBy" xml:space="preserve">
     <value>[Welsh] Added by</value>
   </data>
+	<data name="ManageOrganisation.TabTeam.Permissions.AdminUser" xml:space="preserve">
+    <value>[Welsh] Manage team, submit registration and apply for accreditation</value>
+  </data>
   <data name="ManageOrganisation.TabTeam.Permissions.ApprovedPerson" xml:space="preserve">
-    <value>[Welsh] Manage team, submit registration and accreditation (Approved Person)</value>
+    <value>[Welsh] Manage team, submit registration and accreditation</value>
   </data>
   <data name="ManageOrganisation.TabTeam.Permissions.StandardUser" xml:space="preserve">
-    <value>[Welsh] Submit registration and accreditation (Standard User)</value>
+    <value>[Welsh] Submit registration and accreditation</value>
   </data>
   <data name="ManageOrganisation.TabTeam.Permissions.BasicUser" xml:space="preserve">
-    <value>[Welsh] Read only access (Basic User)</value>
+    <value>[Welsh] Read only access</value>
   </data>
   <data name="ManageOrganisation.TabTeam.Permissions.ReadOnly" xml:space="preserve">
-    <value>[Welsh] Read only access (ReadOnly User)</value>
+    <value>[Welsh] Read only access</value>
   </data>
   <data name="Remove" xml:space="preserve">
     <value>[Welsh] Remove</value>
